hphp/test/zend/bad/ext/reflection/tests/ReflectionExtension_getClassNames_basic.php
<?php
$standard = new ReflectionExtension('standard');
var_dump($standard->getClassNames());
?>
==DONE==
